--- a/books.html
+++ b/books.html
@@ -23,12 +23,12 @@
     <meta property="og:title" content="18 Reflections | Jose-Maria Kimburi">
     <meta property="og:description" content="18 Reflections by Jose-Maria Kimburi.">
     <meta property="og:url" content="https://www.j-mk.com/books">
-    <meta property="og:image" content="https://j-mk.com/Assets/bookcover2.jpg">
+    <meta property="og:image" content="https://j-mk.com/Assets/bookcover.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="18 Reflections | Jose-Maria Kimburi">
     <meta name="twitter:description" content="18 Reflections by Jose-Maria Kimburi.">
-    <meta name="twitter:image" content="https://j-mk.com/Assets/bookcover2.jpg">
+    <meta name="twitter:image" content="https://j-mk.com/Assets/bookcover.jpg">
 
     <!-- Paste this in <head> on index.html, books.html, media.html (after meta tags) -->
 <script>
@@ -269,7 +269,7 @@
         <article class="bookRow" itemscope itemtype="https://schema.org/Book" aria-labelledby="book-title-18ref">
           <div class="cover">
             <!-- Cover image: single src (no srcset) so desktop won't request missing variants -->
-            <img src="/Assets/bookcover2.jpg" width="320" height="480" alt="18 Reflections book cover" loading="eager" decoding="async" itemprop="image">
+            <img src="/Assets/bookcover.jpg" width="320" height="480" alt="18 Reflections book cover" loading="eager" decoding="async" itemprop="image">
           </div>
 
           <div class="meta">
@@ -332,7 +332,7 @@
               "@id": "https://j-mk.com/#author",
               "name": "Jose-Maria Kimburi"
             },
-            "image": "https://j-mk.com/Assets/bookcover2.jpg",
+            "image": "https://j-mk.com/Assets/bookcover.jpg",
             "description": "Reflections on identity, mental health and environment targeted at young adults.",
             "url": "https://www.j-mk.com/books",
             "inLanguage": "en-GB",
@@ -353,6 +353,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
