--- a/media.html
+++ b/media.html
@@ -296,7 +296,7 @@
   <div class="videoMeta">
     <h3 id="video1-title">BioVerse TV: Unplugging from Social Media | Official Documentary</h3>
     <p class="muted">
-      BioVerse TV: Unplugging from Social Media is Jose-Maria Kimburi’s directorial debut exploring what happens when we step away from our screens and reconnect to the natural world around us. With stunning visuals and honest stories and reflections, this documentary reveals the power of nature to heal and inspire.
+      BioVerse TV: Unplugging from Social Media is Jose-Maria Kimburi’s directorial debut exploring what happens when we step away from our screens and reconnect to the natural world around us. With stunning visuals and honest stories, this documentary reveals the power of nature to heal and inspire.
 
     </p>
 
@@ -520,4 +520,5 @@
 </script>
   </body>
 </html>
+
 
