--- a/index.html
+++ b/index.html
@@ -338,19 +338,13 @@
 
           <p>
             <i>
-              18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to
-              articulate the complex realities his generation faces as they grow up amid social, environmental,
-              economic and health challenges. This will be published in November. Exact date to be released shortly.
+            18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges. This book will be published on Thursday 13th November 2025.
             </i>
           </p>
 
           <p>
             <i>
-              BioVerse TV: Unplugging from Social Media is his directorial debut documentary, encouraging people to step back from
-              the constant busyness of digital life and reconnect with the natural world. The film highlights the
-              mental health benefits of spending time in nature while showcasing its beauty and biodiversity. By weaving
-              together personal experiences, expert interviews and practical advice, BioVerse TV presents a refreshing
-              and accessible way to rethink our relationship with both technology and the environment. The trailer is out now.
+              BioVerse TV: Unplugging from Social Media is his directorial debut documentary, following people across national, urban and rural spaces in the UK who are choosing to step away from screens and digital overload. Produced and directed by Kimburi, it explores the mental health benefits of stepping away from the digital world and rediscovering the natural world around us.
             </i>
           </p>
 
@@ -412,6 +406,7 @@
     </script>
   </body>
 </html>
+
 
 
 
