--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta property="og:title" content="Jose-Maria Kimburi">
     <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
     <meta property="og:url" content="https://www.j-mk.com/">
-    <meta property="og:image" content="https://j-mk.com/Assets/away2.jpg">
+    <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jose-Maria Kimburi">
     <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-    <meta name="twitter:image" content="https://j-mk.com/Assets/away2.jpg">
+    <meta name="twitter:image" content="https://j-mk.com/Assets/away.jpg">
 
     <!-- Paste this in <head> on index.html, books.html, media.html (after meta tags) -->
 <script>
@@ -55,8 +55,8 @@
     <link rel="icon" href="/Assets/favicon.png" type="image/png">
 
     <!-- Performance hints (root-based) -->
-    <link rel="preload" href="/Assets/away2.jpg" as="image">
-    <link rel="preload" href="/Assets/direct2.jpg" as="image">
+    <link rel="preload" href="/Assets/away.jpg" as="image">
+    <link rel="preload" href="/Assets/direct.jpg" as="image">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -300,8 +300,8 @@
     <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
       <section class="heroGallery" aria-label="Gallery of images">
         <!-- using root-based src only (no srcset) so desktop won't attempt missing variants -->
-        <img src="/Assets/away2.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
-        <img src="/Assets/direct2.jpg" width="1200" height="250" alt="Jose-Maria Kimburi side view" loading="eager" decoding="async">
+        <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
+        <img src="/Assets/direct.jpg" width="1200" height="250" alt="Jose-Maria Kimburi side view" loading="eager" decoding="async">
       </section>
 
       <section class="heroName">
@@ -386,7 +386,7 @@
             "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
             "jobTitle": "Author & Filmmaker",
             "url": "https://j-mk.com/",
-            "image": "https://j-mk.com/Assets/away2.jpg",
+            "image": "https://j-mk.com/Assets/away.jpg",
             "sameAs": ["https://www.instagram.com/JKimburi"],
             "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV."
           },
@@ -406,6 +406,7 @@
     </script>
   </body>
 </html>
+
 
 
 
