--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <!-- Performance hints (root-based) -->
     <link rel="preload" href="/Assets/away.jpg" as="image">
     <link rel="preload" href="/Assets/direct.jpg" as="image">
+    <link rel="preload" href="/Assets/JMK1.jpg" as="image">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -298,11 +299,13 @@
     </header>
 
     <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
-      <section class="heroGallery" aria-label="Gallery of images">
-        <!-- using root-based src only (no srcset) so desktop won't attempt missing variants -->
-        <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
-        <img src="/Assets/direct.jpg" width="1200" height="250" alt="Jose-Maria Kimburi side view" loading="eager" decoding="async">
-      </section>
+ 
+      <section class="heroGallery" aria-label="Gallery of images"> 
+  <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
+  <img src="/Assets/JMK1.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
+  <img src="/Assets/direct.jpg" width="1200" height="250" alt="Jose-Maria Kimburi side view" loading="eager" decoding="async">
+    </section>
+
 
       <section class="heroName">
         <h1 itemprop="name">Jose-Maria Kimburi</h1>
@@ -406,6 +409,7 @@
     </script>
   </body>
 </html>
+
 
 
 
