--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <!-- Performance hints (root-based) -->
     <link rel="preload" href="/Assets/away.jpg" as="image">
     <link rel="preload" href="/Assets/JMK1.jpg" as="image">
+    <link rel="preload" href="/Assets/Jose, Lucy, Oliver.jpg" as="image">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -301,7 +302,9 @@
  
       <section class="heroGallery" aria-label="Gallery of images"> 
     <img src="/Assets/JMK1.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
-    <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi head on" loading="eager" decoding="async">
+    <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi Away" loading="eager" decoding="async">
+    <img src="/Assets/Jose, Lucy, Oliver.jpg" width="1200" height="250" alt="Jose, Lucy, Oliver" loading="eager" decoding="async">
+
 
     </section>
 
@@ -408,6 +411,7 @@
     </script>
   </body>
 </html>
+
 
 
 
