--- a/books.html
+++ b/books.html
@@ -298,7 +298,7 @@
 
             <div class="actions" role="group" aria-label="Purchase links for 18 Reflections">
               <a href="https://www.amazon.co.uk/dp/B0FSLLMF8F" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Amazon">Kindle</a>
-              <a href="https://books.google.co.uk/books?id=8aePEQAAQBAJ&newbks=0&hl=en&source=newbks_fb&redir_esc=y" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Play Preview</a>
+              <a href="https://books.google.co.uk/books?id=8aePEQAAQBAJ&newbks=0&hl=en&source=newbks_fb&redir_esc=y" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Books</a>
               <a href="https://books.apple.com/us/book/18-reflections-divides-epidemics-and-the/id6752995264?ign-itscg=30200" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Apple</a>
 
             </div>
@@ -355,6 +355,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
