--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Performance hints (root-based) -->
     <link rel="preload" href="/Assets/away.jpg" as="image">
     <link rel="preload" href="/Assets/JMK1.jpg" as="image">
-    <link rel="preload" href="/Assets/Jose, Lucy, Oliver.jpg" as="image">
+    <link rel="preload" href="/Assets/18reflections3" as="image">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -303,7 +303,7 @@
       <section class="heroGallery" aria-label="Gallery of images"> 
       <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi Away" loading="eager" decoding="async">
       <img src="/Assets/JMK1.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
-      <img src="/Assets/Jose, Lucy, Oliver.jpg" width="1200" height="250" alt="Jose, Lucy, Oliver" loading="eager" decoding="async">
+      <img src="/Assets/18reflections3" width="1200" height="250" alt="Jose, Lucy, Oliver" loading="eager" decoding="async">
 
 
 
@@ -412,31 +412,3 @@
     </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
