--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <section class="heroGallery" aria-label="Gallery of images"> 
       <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi Away" loading="eager" decoding="async">
       <img src="/Assets/JMK1.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
-      <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="Jose, Lucy, Oliver" loading="eager" decoding="async">
+      <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
 
 
 
@@ -412,4 +412,5 @@
     </script>
   </body>
 </html>
+
 
