--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta property="og:title" content="Jose-Maria Kimburi">
     <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
     <meta property="og:url" content="https://www.j-mk.com/">
-    <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
+    <meta property="og:image" content="https://j-mk.com/Assets/JMK1.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jose-Maria Kimburi">
     <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-    <meta name="twitter:image" content="https://j-mk.com/Assets/away.jpg">
+    <meta name="twitter:image" content="https://j-mk.com/Assets/JMK1.jpg">
 
     <!-- Paste this in <head> on index.html, books.html, media.html (after meta tags) -->
 <script>
@@ -58,6 +58,8 @@
     <link rel="preload" href="/Assets/away.jpg" as="image">
     <link rel="preload" href="/Assets/JMK1.jpg" as="image">
     <link rel="preload" href="/Assets/18reflections3.jpg" as="image">
+    <link rel="preload" href="/Assets/18reflections1.jpg" as="image">
+
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -301,6 +303,7 @@
     <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
  
       <section class="heroGallery" aria-label="Gallery of images"> 
+      <img src="/Assets/18reflections1.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi Away" loading="eager" decoding="async">
       <img src="/Assets/JMK1.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
       <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
@@ -412,5 +415,6 @@
     </script>
   </body>
 </html>
+
 
 
