--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <link rel="preload" href="/Assets/J-MK.jpg" as="image">
     <link rel="preload" href="/Assets/18reflections3.jpg" as="image">
     <link rel="preload" href="/Assets/18reflections1.jpg" as="image">
+    <link rel="preload" href="/Assets/18reflections2.jpg" as="image">
+
 
 
     <!-- Fonts -->
@@ -305,6 +307,8 @@
       <img src="/Assets/J-MK.jpg"  width="1200" height="250" alt="Jose-Maria Kimburi"        loading="eager" decoding="async">
       <img src="/Assets/18reflections1.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
+      <img src="/Assets/18reflections2.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
+
 
 
 
@@ -413,6 +417,7 @@
     </script>
   </body>
 </html>
+
 
 
 
