--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <link rel="preload" href="/Assets/18reflections3.jpg" as="image">
     <link rel="preload" href="/Assets/18reflections1.jpg" as="image">
     <link rel="preload" href="/Assets/18reflections2.jpg" as="image">
+    <link rel="preload" href="/Assets/away.jpg" as="image">
 
 
 
@@ -308,6 +309,7 @@
       <img src="/Assets/18reflections1.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/18reflections2.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
+      <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose Looking Away" loading="eager" decoding="async">
 
 
 
@@ -417,6 +419,7 @@
     </script>
   </body>
 </html>
+
 
 
 
