--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
           <p>
             <i>
-            18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges. This book will be published on Thursday 13th November 2025.
+            18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges.
             </i>
           </p>
 
@@ -417,6 +417,7 @@
     </script>
   </body>
 </html>
+
 
 
 
