--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="author" content="Jose-Maria Kimburi">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV">
-    <link rel="canonical" href="https://www.j-mk.com/">
-    <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/">
+    <link rel="canonical" href="https://j-mk.com/">
+    <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/">
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jose-Maria Kimburi">
     <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-    <meta property="og:url" content="https://www.j-mk.com/">
+    <meta property="og:url" content="https://j-mk.com/">
     <meta property="og:image" content="https://j-mk.com/Assets/J-MK.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -417,6 +417,7 @@
     </script>
   </body>
 </html>
+
 
 
 
