--- a/books.html
+++ b/books.html
@@ -14,15 +14,15 @@
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, Jose-Maria author, J-MK books">
 
     <!-- Canonical -->
-   <link rel="canonical" href="https://www.j-mk.com/books">
-   <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/books">
+   <link rel="canonical" href="https://j-mk.com/books">
+   <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/books">
 
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="book">
     <meta property="og:title" content="18 Reflections | Jose-Maria Kimburi">
     <meta property="og:description" content="18 Reflections by Jose-Maria Kimburi.">
-    <meta property="og:url" content="https://www.j-mk.com/books">
+    <meta property="og:url" content="https://j-mk.com/books">
     <meta property="og:image" content="https://j-mk.com/Assets/bookcover.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -326,7 +326,7 @@
         "@graph": [
           {
             "@type": "Book",
-            "@id": "https://www.j-mk.com/books#book",
+            "@id": "https://j-mk.com/books#book",
             "name": "18 Reflections",
             "alternateName": "18 Reflections: Divides, Epidemics and the Generation Caught in Between",
             "author": {
@@ -336,7 +336,7 @@
             },
             "image": "https://j-mk.com/Assets/bookcover.jpg",
             "description": "Reflections on identity, mental health and environment targeted at young adults.",
-            "url": "https://www.j-mk.com/books",
+            "url": "https://j-mk.com/books",
             "inLanguage": "en-GB",
             "datePublished": "2026-06-26",
             "isbn": "9798283299419",
@@ -355,6 +355,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
