--- a/media.html
+++ b/media.html
@@ -12,20 +12,20 @@
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, 18 Reflections, BioVerse TV, BioVerse TV Unplugging from Social Media, JKimburi, documentary, teaser">
 
-    <link rel="canonical" href="https://www.j-mk.com/media">
-    <link rel="alternate" hreflang="en-GB" href="https://www.j-mk.com/media">
+    <link rel="canonical" href="https://j-mk.com/media">
+    <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/media">
 
     <!-- Open Graph & Twitter card for richer sharing -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Media | Jose-Maria Kimburi">
     <meta property="og:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
-    <meta property="og:url" content="https://www.j-mk.com/media">
-    <meta property="og:image" content="https://www.j-mk.com/Assets/direct2.jpg">
+    <meta property="og:url" content="https://j-mk.com/media">
+    <meta property="og:image" content="https://j-mk.com/Assets/direct2.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Media | Jose-Maria Kimburi">
     <meta name="twitter:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
-    <meta name="twitter:image" content="https://www.j-mk.com/Assets/direct2.jpg">
+    <meta name="twitter:image" content="https://j-mk.com/Assets/direct2.jpg">
 
     <!-- Favicon -->
     <link rel="icon" href="Assets/favicon.png" type="image/png">
@@ -429,36 +429,36 @@
   "@graph": [
     {
       "@type": "Person",
-      "@id": "https://www.j-mk.com/#person",
+      "@id": "https://j-mk.com/#person",
       "name": "Jose-Maria Kimburi",
       "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
       "jobTitle": "Author & Filmmaker",
-      "url": "https://www.j-mk.com/",
-      "image": "https://www.j-mk.com/Assets/direct2.jpg",
+      "url": "https://j-mk.com/",
+      "image": "https://j-mk.com/Assets/direct2.jpg",
       "sameAs": ["https://www.instagram.com/JKimburi"],
       "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Director of BioVerse TV: Unplugging from Social Media."
     },
     {
       "@type": "WebSite",
-      "@id": "https://www.j-mk.com/#website",
-      "url": "https://www.j-mk.com/",
+      "@id": "https://j-mk.com/#website",
+      "url": "https://j-mk.com/",
       "name": "Jose-Maria Kimburi",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.j-mk.com/?s={search_term_string}",
+        "target": "https://j-mk.com/?s={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     },
     {
       "@type": "BreadcrumbList",
       "itemListElement": [
-        {"@type":"ListItem","position":1,"name":"Home","item":"https://www.j-mk.com/"},
-        {"@type":"ListItem","position":2,"name":"Media","item":"https://www.j-mk.com/media"}
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://j-mk.com/"},
+        {"@type":"ListItem","position":2,"name":"Media","item":"https://j-mk.com/media"}
       ]
     },
     {
       "@type": "VideoObject",
-      "@id": "https://www.j-mk.com/media#video1",
+      "@id": "https://j-mk.com/media#video1",
       "name": "BioVerse TV: Unplugging from Social Media | Official Documentary",
       "description": "New clip from BioVerse TV: Unplugging from Social Media.",
       "thumbnailUrl": "https://img.youtube.com/vi/c5UKN-Uh2tE/hqdefault.jpg",
@@ -468,7 +468,7 @@
     },
     {
       "@type": "VideoObject",
-      "@id": "https://www.j-mk.com/media#video2",
+      "@id": "https://j-mk.com/media#video2",
       "name": "BioVerse TV: Unplugging from Social Media | Official Documentary Trailer",
       "description": "Official documentary trailer for BioVerse TV: Unplugging from Social Media.",
       "thumbnailUrl": "https://img.youtube.com/vi/FwLV0fk1lv0/hqdefault.jpg",
@@ -478,7 +478,7 @@
     },
     {
       "@type": "VideoObject",
-      "@id": "https://www.j-mk.com/media#video3",
+      "@id": "https://j-mk.com/media#video3",
       "name": "BioVerse TV: Unplugging from Social Media | Official Teaser 2",
       "description": "Teaser 2 for BioVerse TV: Unplugging from Social Media featuring Lucy Lapwing.",
       "thumbnailUrl": "https://img.youtube.com/vi/ul8YApOvM2c/hqdefault.jpg",
@@ -488,7 +488,7 @@
     },
     {
       "@type": "VideoObject",
-      "@id": "https://www.j-mk.com/media#video4",
+      "@id": "https://j-mk.com/media#video4",
       "name": "BioVerse TV: Unplugging from Social Media | Official Teaser 1",
       "description": "Teaser 1 for BioVerse TV: Unplugging from Social Media. Jessica shares her experience stepping away from digital life.",
       "thumbnailUrl": "https://img.youtube.com/vi/XykgaUQwXy4/hqdefault.jpg",
@@ -501,6 +501,7 @@
 </script>
   </body>
 </html>
+
 
 
 
