--- a/books.html
+++ b/books.html
@@ -315,7 +315,7 @@
         <article class="bookRow" itemscope itemtype="https://schema.org/Book" aria-labelledby="book-title-18ref">
           <div class="cover">
             <!-- Cover image: single src (no srcset) so desktop won't request missing variants -->
-            <img src="/Assets/placer.png" width="320" height="480" alt="Beyond the Screen Placeholder" loading="eager" decoding="async" itemprop="image">
+            <img src="/Assets/placer.png" width="320" height="480" alt="Book Cover Placeholder" loading="eager" decoding="async" itemprop="image">
           </div>
 
           <div class="meta">
@@ -354,7 +354,7 @@
         <article class="bookRow" itemscope itemtype="https://schema.org/Book" aria-labelledby="book-title-18ref">
           <div class="cover">
             <!-- Cover image: single src (no srcset) so desktop won't request missing variants -->
-            <img src="/Assets/placer.png" width="320" height="480" alt="Beyond the Screen Placeholder" loading="eager" decoding="async" itemprop="image">
+            <img src="/Assets/placer.png" width="320" height="480" alt="Book Cover Placeholder" loading="eager" decoding="async" itemprop="image">
           </div>
 
           <div class="meta">
@@ -438,6 +438,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
