--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
       <footer>
         <div>
-          <p>© 2025 Jose-Maria Kimburi. All rights reserved.</p>
+          <p>© Jose-Maria Kimburi, 2025. All rights reserved.</p>
           <p>For all general enquiries, email <a href="mailto:info@j-mk.com">info@j-mk.com</a></p>
         </div>
       </footer>
@@ -417,6 +417,7 @@
     </script>
   </body>
 </html>
+
 
 
 
