--- a/media.html
+++ b/media.html
@@ -416,7 +416,7 @@
 
       <footer>
         <div style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;margin-top:1.5rem">
-          <p>© 2025 Jose-Maria Kimburi. All rights reserved.</p>
+          <p>© Jose-Maria Kimburi, 2025. All rights reserved.</p>
           <p class="muted">For all general enquiries, email <a href="mailto:info@j-mk.com" style="color:#7bd389; text-decoration:underline" rel="noopener noreferrer">info@j-mk.com</a></p>
         </div>
       </footer>
@@ -501,6 +501,7 @@
 </script>
   </body>
 </html>
+
 
 
 
