--- a/index.html
+++ b/index.html
@@ -349,14 +349,22 @@
 
           <p>
             <i>
-            18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges.
+            18 Reflections: Divides, Epidemics and the Generation Caught in Between was his debut book, written to articulate the complex realities his generation faces as they grow up amid social, environmental, economic and health challenges.
             </i>
           </p>
 
           <p>
             <i>
-              BioVerse TV: Unplugging from Social Media is his directorial debut documentary, following people across national, urban and rural spaces in the UK who are choosing to step away from screens and digital overload. Produced and directed by Kimburi, it explores the mental health benefits of stepping away from the digital world and rediscovering the natural world around us.
+              BioVerse TV: Unplugging from Social Media was his directorial debut documentary, following people across national, urban and rural spaces in the UK who are choosing to step away from screens and digital overload. Produced and directed by Kimburi, it explores the mental health benefits of stepping away from the digital world and rediscovering the natural world around us.
             </i>
+          </p>
+
+           <p>
+              Beyond the Screen: Nature’s Cure for the Digital Generation is his second book (forthcoming), designed to help young people reconnect with nature in an increasingly digital age.
+          </p>
+
+          <p>
+             People, Place & Patterns is his third book (forthcoming), exploring how our identity is shaped by the people we meet, the places we move through and the patterns we both inherit and create. 
           </p>
 
           <section class="updates" aria-label="Updates">
@@ -417,6 +425,7 @@
     </script>
   </body>
 </html>
+
 
 
 
