--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
     <link rel="preload" href="/Assets/18reflections1.jpg" as="image">
     <link rel="preload" href="/Assets/away.jpg" as="image">
 
-
-
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
@@ -308,10 +306,6 @@
       <img src="/Assets/18reflections1.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/18reflections3.jpg" width="1200" height="250" alt="18 Reflections Book Cover" loading="eager" decoding="async">
       <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose Looking Away" loading="eager" decoding="async">
-
-
-
-
     </section>
 
 
@@ -394,47 +388,122 @@
       </footer>
     </main>
 
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@graph": [
-          {
-            "@type": "Person",
-            "@id": "https://j-mk.com/#person",
-            "name": "Jose-Maria Kimburi",
-            "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
-            "jobTitle": "Author & Filmmaker",
-            "url": "https://j-mk.com/",
-            "image": "https://j-mk.com/Assets/away.jpg",
-            "sameAs": ["https://www.instagram.com/JKimburi"],
-            "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV."
-          },
-          {
-            "@type": "WebSite",
-            "@id": "https://j-mk.com/#website",
-            "url": "https://j-mk.com/",
-            "name": "Jose-Maria Kimburi",
-            "potentialAction": {
-              "@type": "SearchAction",
-              "target": "https://j-mk.com/?s={search_term_string}",
-              "query-input": "required name=search_term_string"
-            }
-          }
-        ]
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Person",
+      "@id": "https://j-mk.com/#person",
+      "name": "Jose-Maria Kimburi",
+      "alternateName": [
+        "Jose-Maria",
+        "Jose Kimburi",
+        "J Kimburi",
+        "JKimburi"
+      ],
+      "jobTitle": "Author & Filmmaker",
+      "url": "https://j-mk.com/",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://j-mk.com/Assets/away.jpg",
+        "width": 1200,
+        "height": 1200
+      },
+      "sameAs": [
+        "https://www.instagram.com/JKimburi",
+        "https://www.goodreads.com/author/show/59778430.Jose_Maria_Kimburi"
+      ],
+      "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV.",
+      "mainEntityOfPage": {
+        "@id": "https://j-mk.com/#website"
       }
-    </script>
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://j-mk.com/#kimburi-press",
+      "name": "Kimburi Press",
+      "url": "https://j-mk.com/",
+      "founder": {
+        "@id": "https://j-mk.com/#person"
+      }
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://j-mk.com/#website",
+      "url": "https://j-mk.com/",
+      "name": "Jose-Maria Kimburi",
+      "publisher": {
+        "@id": "https://j-mk.com/#kimburi-press"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://j-mk.com/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "Book",
+      "@id": "https://j-mk.com/books#18-reflections",
+      "name": "18 Reflections: Divides, Epidemics and the Generation Caught in Between",
+      "isbn": "978-1-9193573-0-0",
+      "datePublished": "2025-11-13",
+      "author": {
+        "@id": "https://j-mk.com/#person"
+      },
+      "publisher": {
+        "@id": "https://j-mk.com/#kimburi-press"
+      },
+      "url": "https://j-mk.com/books/18-reflections",
+      "image": "https://j-mk.com/images/18-reflections-cover.jpg",
+      "sameAs": [
+        "https://amzn.eu/d/igpLzcp",
+        "https://www.waterstones.com/book/18-reflections-divides-epidemics-and-the-generation-caught-in-between/jose-maria-kimburi/9781919357300",
+        "https://www.google.co.uk/books/edition/18_Reflections_Divides_Epidemics_and_the/ydiUEQAAQBAJ?hl=en&gbpv=0"
+      ]
+    },
+    {
+      "@type": "Book",
+      "@id": "https://j-mk.com/books#beyond-the-screen",
+      "name": "Beyond the Screen: Nature's Cure for the Digital Generation",
+      "isbn": "978-1-9193573-3-1",
+      "datePublished": "2026-02-17",
+      "author": {
+        "@id": "https://j-mk.com/#person"
+      },
+      "publisher": {
+        "@id": "https://j-mk.com/#kimburi-press"
+      },
+      "url": "https://j-mk.com/books/beyond-the-screen",
+      "image": "https://j-mk.com/images/beyond-the-screen-cover.jpg",
+      "sameAs": [
+        "https://amzn.eu/d/2x7TGIJ",
+        "https://www.waterstones.com/book/beyond-the-screen/jose-maria-kimburi/9781919357331",
+        "https://books.google.co.uk/books?id=ISybEQAAQBAJ&newbks=0&dq=jose-maria+kimburi&source=gbs_navlinks_s"
+      ]
+    },
+    {
+      "@type": "Book",
+      "@id": "https://j-mk.com/books#people-place-patterns",
+      "name": "People, Place & Patterns",
+      "isbn": "978-1-9193573-4-8",
+      "datePublished": "2026-05-19",
+      "author": {
+        "@id": "https://j-mk.com/#person"
+      },
+      "publisher": {
+        "@id": "https://j-mk.com/#kimburi-press"
+      },
+      "url": "https://j-mk.com/books/people-place-patterns",
+      "image": "https://j-mk.com/images/people-place-patterns-cover.jpg",
+      "sameAs": [
+        "https://amzn.eu/d/8LbcAnA",
+        "https://books.google.co.uk/books?id=COCcEQAAQBAJ&newbks=0&dq=jose-maria+kimburi&source=gbs_navlinks_s"
+      ]
+    }
+  ]
+}
+</script>
+
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
