--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           <h2 itemprop="alternateName">J.K</h2>
 <br> 
           <p itemprop="description">
-            Jose-Maria Kimburi is an 18-year-old author & filmmaker (producer & director) based in the UK. 
+            Jose-Maria Kimburi is an 18-year-old British author & filmmaker (producer & director) based in the UK. 
             His work explores both human and physical change through geography, with creative projects centred around people-place relationships.
           </p>
 
@@ -507,3 +507,4 @@
 
   </body>
 </html>
+
