--- a/books.html
+++ b/books.html
@@ -364,7 +364,7 @@
             <p itemprop="description">
               People are messy. Places are messy. Patterns are complex. <br>
               We learn who we are through the people we care about and the people we lose. <br>
-              We form our identity through the places that we grew up in and the places we visited. <br>
+              We form our identity through the places we grew up in and the places we visit. <br>
               We spot patterns and try to understand the forces that shape our lives.
             </p>
 
@@ -438,6 +438,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
