--- a/index.html
+++ b/index.html
@@ -337,8 +337,7 @@
           <h2 itemprop="alternateName">J.K</h2>
 <br> 
           <p itemprop="description">
-            Jose-Maria Kimburi is an 18-year-old (born 26 June 2007) British author and filmmaker (producer and director) based in the UK. 
-            His work explores both human and physical change through geography, with creative projects centred around people-place relationships.
+            Jose-Maria Kimburi is an 18-year-old, born 26 June 2007, British author and filmmaker (producer and director) based in the UK. His work explores both human and physical change through geography, with creative projects centred on people–place relationships. He has directed a documentary and authored several books, both published and forthcoming, that reflect his ongoing exploration of people, place and change.
           </p>
 
           <p>
@@ -507,6 +506,7 @@
 
   </body>
 </html>
+
 
 
 
