--- a/books.html
+++ b/books.html
@@ -308,7 +308,7 @@
   <article class="bookRow" itemscope itemtype="https://schema.org/Book" aria-labelledby="book-title-18ref">
           <div class="cover">
             <!-- Cover image: single src (no srcset) so desktop won't request missing variants -->
-            <img src="/Assets/18Reflections2ndEd.jpg" width="320" height="480" alt="18 Reflections Second Edition Book Cover" loading="eager" decoding="async" itemprop="image">
+            <img src="/Assets/18Reflections2ndEd.jpg" alt="18 Reflections Second Edition Book Cover" loading="eager" decoding="async" itemprop="image">
           </div>
 
           <div class="meta">
@@ -478,6 +478,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
