--- a/books.html
+++ b/books.html
@@ -308,7 +308,7 @@
   <article class="bookRow" itemscope itemtype="https://schema.org/Book" aria-labelledby="book-title-18ref">
           <div class="cover">
             <!-- Cover image: single src (no srcset) so desktop won't request missing variants -->
-            <img src="/Assets/18Reflections2ndEd.jpg" alt="18 Reflections Second Edition Book Cover" loading="eager" decoding="async" itemprop="image">
+            <img src="/Assets/18Reflections2ndEd.jpg" width="320" height="480" alt="18 Reflections Second Edition Book Cover" loading="eager" decoding="async" itemprop="image">
           </div>
 
           <div class="meta">
@@ -322,15 +322,8 @@
               generation as they grow up amid social, environmental, economic and health challenges.
             </p>
 
-            <p itemprop="author" itemscope itemtype="https://schema.org/Person">
-              <span itemprop="name">Jose-Maria Kimburi</span> writes about the divides and epidemics shaping Gen Z,
-              such as mental health, identity, faith, burnout and inequality. Each chapter begins with an anecdote,
-              offering context to anchor the reflection.
-            </p>
-
             <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
             <p><i>This Second Edition has been revised throughout, with updated interior text and cover.</i></p>
-
 
             <p>
               Publication date:
@@ -478,6 +471,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
