--- a/books.html
+++ b/books.html
@@ -323,7 +323,7 @@
             </p>
 
             <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
-            <p><i>This Second Edition has been revised throughout, with updated interior text and cover.</i></p>
+            <p><b>This Second Edition has been revised throughout, with updated interior text and cover.</b></p>
 
             <p>
               Publication date:
@@ -471,6 +471,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
