--- a/books.html
+++ b/books.html
@@ -332,7 +332,7 @@
             </p>
 
             <div class="actions" role="group" aria-label="Purchase links for 18 Reflections">
-              <a href="" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Pre-order">Amazon Pre-order</a>
+              <a href="https://amzn.eu/d/0hf51DXc" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Pre-order">Amazon Pre-order</a>
               <a href="https://books.apple.com/gb/book/18-reflections-divides-epidemics-and-the/id6758156008" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Pre-order">Apple Books Pre-order</a>
               <a href="https://play.google.com/store/books/details?id=8ea1EQAAQBAJ" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Pre-order">Google Play Books Pre-order</a>
 
@@ -471,6 +471,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
