--- a/books.html
+++ b/books.html
@@ -326,7 +326,7 @@
             </p>
 
             <p><i>This project is supported by the Eric Hosking Trust.</i></p>
-            <p><i>Free copies are available for young people. Please email books@j-mk.com for more information.</i></p>
+            <p><b>Free copies are available for young people. Please email books@j-mk.com for more information.</b></p>
 
 
             <p>
@@ -436,6 +436,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
