--- a/books.html
+++ b/books.html
@@ -325,7 +325,7 @@
               <span itemprop="name"> This is Jose-Maria Kimburi</span> second book. Readers are introduced to BioVerse TV: Unplugging from Social Media, UK landscapes, UK wildlife and a wide range of volunteering opportunities through youth-friendly organisations in the UK.
             </p>
 
-            <p><i>This project is supported by the Eric Hosking Trust.</i></p>
+            <p><i>This project is supported by the Eric Hosking Charitable Trust.</i></p>
             <p><b>Free copies are available for young people. Please email books@j-mk.com for more information.</b></p>
 
 
@@ -436,6 +436,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
