--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           <h2 itemprop="alternateName">J.K</h2>
 <br> 
           <p itemprop="description">
-            Jose-Maria Kimburi is a British author and filmmaker (producer and director) based in the UK. His work explores human and physical change through geography, with creative projects centred on people–place relationships. He has directed a documentary and authored several books, both published and forthcoming, that reflect his ongoing exploration of people, place and change.
+            Jose-Maria Kimburi is a British author, essayist, filmmaker and geographer. His work explores human and physical change through geography, with creative projects centred on people–place relationships. He has directed a documentary and authored several books, both published and forthcoming, reflecting his focus on people, place and change. His writing has appeared in various magazines and online publications.
           </p>
 
           <section class="updates" aria-label="Updates">
@@ -486,6 +486,7 @@
 
   </body>
 </html>
+
 
 
 
